--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <table id="table">
         <tr>
+            <!--Algo-->
             <th>id</th>
             <th>firstName</th>
             <th>lastName</th>
